# this-axum

./: .gitignore  Cargo.toml
scripts/: cdev  rtest
src/: config.rs  error.rs  main.rs
src/db/: connection.rs
src/web/: mod.rs  routes_login.rs
tests/: login_dev.rs  quick_dev.rs
