[package]
name = "this-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs"] }
futures = "0.3.28"
dotenv = "0.15.0"
mongodb= "3.2.3"

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10"
